# citations

./: Makefile  README.md  citations.bib  citations.html  citations_bib.html  preprints.bib
bib2html.code.v216/: CHANGELOG  HOWTO  Makefile.in  config.status  configure  configure.ac
bib2html.code.v216/configs/: bin.mk  build.mk.in  directory.mk  lib.mk  uninstall.mk
bib2html.code.v216/example/: Makefile.in
bib2html.code.v216/example/bib/: Lagadic04.bib  Lagadic05.bib  Lagadic07.bib  Lagadic08.bib  Lagadic09.bib  Makefile.in  author.cnf  config.cnf.in  confref.cnf  go  html.cnf.in  keyword.cnf  month.cnf  tex.cnf
bib2html.code.v216/example/css/: lagadic-publi.css  lagadic.css
bib2html.code.v216/example/icons/: Makefile
bib2html.code.v216/example/tex/: Makefile.in  bib2html.tex  bib2html_macro.tex  em.tex  em.tex.in  publi.tex.in
bib2html.code.v216/src/: Makefile.in
bib2html.code.v216/src/config/: .make.state  CConfig.cpp  CConfig.h  CConfigMonth.cpp  CConfigMonth.h  Makefile.in
bib2html.code.v216/src/database/: .make.state  CDataBase.h  Makefile.in  check.cpp  check.h  database.cpp  html.cpp  html.h  tex.cpp  tex.h
bib2html.code.v216/src/entry/: .make.state  CEntry.cpp  CEntry.h  CEntryBook.cpp  CEntryBook.h  CEntryInBook.cpp  CEntryInBook.h  CEntryInProceedings.cpp  CEntryInProceedings.h  CEntryJournal.cpp  CEntryJournal.h  CEntryMasterThesis.cpp  CEntryMasterThesis.h  CEntryMisc.cpp  CEntryMisc.h  CEntryPhdThesis.cpp  CEntryPhdThesis.h  CEntryString.cpp  CEntryString.h  CEntryTechReport.cpp  CEntryTechReport.h  CVariousEntry.h  Makefile.in
bib2html.code.v216/src/field/: .make.state  CField.cpp  CField.h  CFieldBooleen.cpp  CFieldBooleen.h  CFieldCrossref.cpp  CFieldCrossref.h  CFieldInteger.cpp  CFieldInteger.h  CFieldKeyword.cpp  CFieldKeyword.h  CFieldMonth.cpp  CFieldMonth.h  CFieldName.cpp  CFieldName.h  CFieldPages.cpp  CFieldPages.h  CFieldString.cpp  CFieldString.h  CFieldYesNo.cpp  CFieldYesNo.h  Makefile.in
bib2html.code.v216/src/include/: constant.h
bib2html.code.v216/src/main/: Makefile.in  bib2html.cpp  bib2ref.cpp
bib2html.code.v216/src/tools/: .make.state  CList.h  Makefile.in  ParseArgv.cpp  ParseArgv.h  String.cpp  String.h  String_replace.cpp  divers.cpp  divers.h  system.cpp  system.h  test.cpp  time.cpp  time.h
